fix: prevent search input overlapping logo on desktop (intended on tablet) and focus styling for a11y (#1887)
* fix: prevent search input overlapping logo on desktop (intended on tablet)
* fix: correct focus styling for a11y
* fix: prevent search elements to be shown above the main categories layer

--- a/src/styles/components/header/search-container.scss
+++ b/src/styles/components/header/search-container.scss
@@ -7,11 +7,18 @@
   // general styling for search input field
   input {
     &.search-input {
+      position: relative;
       height: $search-container-height;
-      padding-right: $space-default * 5.5;
+      padding-right: 42px; // a11y: space for reset button for correct focus outline
       padding-left: ($search-container-height * 0.5);
+      margin-right: 42px; // a11y: space for search button for correct focus outline
       color: $text-color-primary;
       background: $color-inverse;
+      border-right: 1px transparent solid; // a11y: transparent border for correct focus outline
+
+      &:focus-visible {
+        z-index: 1; // a11y: overlay other search elements for correct focus outline
+      }
     }
   }
 
@@ -27,7 +34,7 @@
     &.btn-reset,
     &.btn-search {
       position: absolute;
-      width: auto;
+      width: 42px;
       height: $search-container-height;
       font-size: $font-size-lg;
 
@@ -39,18 +46,23 @@
 
     &.btn-search {
       right: 0;
+
+      &:focus-visible {
+        z-index: 1; // a11y: overlay other search elements for correct focus outline
+      }
     }
 
     &.btn-reset {
+      right: 42px; // a11y: space for correct focus outline
+      z-index: 1; // a11y: overlay other search elements for correct focus outline
+      color: $text-color-quaternary;
+      background: transparent !important;
+      border: 1px transparent solid; // a11y: transparent border for correct focus outline
+      opacity: 1;
+
       &:hover {
         color: $text-color-secondary;
       }
-
-      right: $space-default * 3;
-      color: $text-color-quaternary;
-      background: transparent !important;
-      border: none !important;
-      opacity: 1;
 
       .ng-fa-icon {
         position: relative;
@@ -68,6 +80,7 @@
 
   .search-input {
     float: right;
+    width: calc(100% - 42px); // full width minus search button space
 
     @include media-breakpoint-down(sm) {
       font-size: 16px !important; // prevent page zoom on mobile devices
@@ -75,25 +88,36 @@
   }
 
   .search {
-    @media (max-width: $screen-xs-max) {
-      &.focus {
+    &.focus {
+      @media (max-width: $screen-xs-max) {
         .search-suggest-container {
           // mobile: suggest layer is only shown when search box has focus
           display: block;
         }
       }
+
+      @media (min-width: $screen-sm) {
+        // fully expanded width for suggest layer to overlay the logo
+        width: 327%;
+      }
+
+      @media (min-width: $screen-md) {
+        // expand but leave space for the logo
+        width: 230%;
+      }
+
+      @media (min-width: $screen-lg) {
+        // more space to expand and leave space for the logo
+        width: 240%;
+      }
     }
 
     @media (min-width: $screen-sm) {
       position: absolute;
-      top: calc($search-container-height / -2);
+      top: -$space-default; // align vertically with logo
       right: 0;
       width: 100%;
       transition: width 0.3s ease 0.1s;
-
-      &.focus {
-        width: 250%;
-      }
 
       &.scaled-up {
         .search-suggest-container {
@@ -276,7 +300,6 @@
     right: 0;
     z-index: 2;
     visibility: hidden; // combined with opacity
-    width: 100%;
     width: 100vw;
     height: 0; // prevent overlaying any other elements
     background: $color-dark;
