--- a/src/styles/pages/category/search-result.scss
+++ b/src/styles/pages/category/search-result.scss
@@ -30,6 +30,6 @@
 
   .search-input {
     float: left;
-    width: 320px;
+    width: 280px;
   }
 }
